# claudeman

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-04-07-claudeman-vscode.md  2026-04-07-claudeman.md
docs/superpowers/specs/: 2026-04-07-claudeman-session-manager-design.md  2026-04-07-claudeman-vscode-extension-design.md
src/: config.rs  indexer.rs  main.rs  names.rs  parser.rs  resume.rs  scanner.rs  search.rs  session.rs
src/tui/: input.rs  mod.rs  search_input.rs  ui.rs
tests/: config_test.rs  indexer_test.rs  names_test.rs  parser_test.rs  scanner_test.rs  search_test.rs
tests/fixtures/projects/-home-test-project/: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee.jsonl
tests/fixtures/sessions/: 12345.json
vscode-extension/: .gitignore  .vscodeignore  README.md  package-lock.json  package.json
vscode-extension/media/: preview.css  sessions.css
vscode-extension/src/: commands.ts  extension.ts  names.ts  parser.ts  previewPanel.ts  scanner.ts  sessionStore.ts  sessionViewProvider.ts  treeItems.ts  treeProvider.ts  types.ts  utils.ts
vscode-extension/test/: parser.test.ts  scanner.test.ts  utils.test.ts
vscode-extension/test/fixtures/projects/-home-test-project/: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee.jsonl
