[package]
name = "claudeman"
version = "0.1.0"
edition = "2021"
description = "Claude Code session manager"
authors = ["Matt"]
license = "MIT"
keywords = ["claude", "session", "manager", "tui"]
categories = ["command-line-utilities"]

[dependencies]
tantivy = "0.26"
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
